--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row d-flex justify-content-center mx-0">
-  <div class="big-box-new-movie col-8">
+  <div class="big-box-edit-movie col-8">
     <div class="new-lists">
       <div class="new-list">
         <h1>Edit the <strong>movie</strong> !</h1>
@@ -14,4 +14,6 @@
     </div>
   </div>
 </div>
-<%= link_to "Home", movies_path, class: "btn btn-success btn-home" %>
+<div class="div-btn-home">
+  <%= link_to "Home", movies_path, class: "btn btn-success btn-home" %>
+</div>
