--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
     <%= javascript_importmap_tags %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <%= javascript_include_tag 'movies', 'data-turbo-track': 'reload' %>
   </head>
 
   <body>
