--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -16,7 +16,7 @@
         <% end %>
       </div>
     </div>
-    <%= link_to 'Create a new list', new_list_path(@list), class: "btn btn-success bnt-new-list" %>
+    <%= link_to 'Create a new list', new_list_path, class: "btn btn-success bnt-new-list" %>
   </div>
 </div>
 <div class="div-btn-home">
