--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -12,6 +12,7 @@
     </div>
   </div>
 </div>
-<div class="div-btn-home">
+<div class="div-btn-add">
+  <%= link_to 'My lists', lists_path, class: "btn btn-success btn-my-list"%>
   <%= link_to "Home", movies_path, class: "btn btn-success btn-home" %>
 </div>
