--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,35 +1,30 @@
-<div class="d-flex div-btn-add">
-  <%= link_to 'My lists', lists_path, class: "btn btn-success btn-my-list"%>
-  <%= link_to "Home", movies_path, class: "btn btn-success btn-home" %>
+<div class="head-bookmarks">
+  <h3 class="title-bookmarks">My Bookmarks</h3>
 </div>
-<div class="row d-flex justify-content-center mx-0">
-  <div class="big-box-show-movie col-8">
-    <div class="movie-cards">
-      <div class="list-text">
-        <h3>My Bookmarks</h3>
-        <%= link_to 'Create a bookmark', new_list_bookmark_path(@list), class: "btn-edit-show"  %>
-      </div>
-      <% @bookmarks.each do |bookmark| %>
-        <h1>• <%= bookmark.movie.title %> •<br>
-          <%= bookmark.movie.rating %> <i class="fa-solid fa-star fa-fade" style="color: #fff700;"></i></strong></h1>
-      <div class="list-group-item">
-        <%= image_tag bookmark.movie.poster_url, class:"poster-img-grid" %>
-        <div class="">
-          <p><%= bookmark.movie.overview %></p>
-          <h4><em>"<%= bookmark.comment %>"</em></h4>
-          <div class="show-delete">
-            <%= link_to "See more", movie_path(bookmark.movie), class: "btn-see-more" %>
-            <%= link_to "Delete",
+<div class="">
+  <div class="row row-cols-1 row-cols-md-3 g-3 justify-content-center">
+    <% @bookmarks.each do |bookmark| %>
+      <div class="big-box-list-movie col">
+        <div class="movie-cards">
+          <div class="">
+            <h4>• <strong><%= bookmark.movie.title %> • <br>
+                <%= bookmark.movie.rating %> <i class="fa-solid fa-star fa-fade" style="color: #fff700;"></i></strong></h4>
+            <%= image_tag bookmark.movie.poster_url, class:"poster-img-grid" %>
+            <h4><em>"<%= bookmark.comment %>"</em></h4>
+            <div class="show-delete">
+              <%= link_to "See more", movie_path(bookmark.movie), class: "btn-see-more" %>
+              <%= link_to "Delete",
                             bookmark_path(bookmark),
                             data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "delete" %>
+            </div>
           </div>
         </div>
       </div>
     <% end %>
   </div>
-  <%= button_to "Delete list",
-                        list_path(@list),
-                        data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn-see-more" %>
 </div>
-</div>
+<div class="div-btn-add">
+  <%= link_to "My lists", lists_path, class: "btn btn-success btn-my-list" %>
+  <%= link_to 'Add a bookmark', new_list_bookmark_path(@list), class: "btn btn-success btn-my-list"  %>
+  <%= link_to "Home", movies_path, class: "btn btn-success btn-home" %>
 </div>
