--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,12 +1,12 @@
 <div class="row d-flex justify-content-center mx-0">
-  <div class="big-box-new-movie-reate col-8">
+  <div class="big-box-new-movie-reate-list col-8">
     <div class="new-lists">
       <div class="new-list">
         <h1>Create a new <strong>list</strong> !</h1>
         <%= simple_form_for(@list) do |f| %>
           <%= f.input :name, input_html: {class: "text-list-new-movie"} %>
           <%= f.input :photo, as: :file %>
-          <%= f.submit "Submit", class: "btn btn-success" %>
+          <%= f.submit "Submit", class: "btn btn-success btn-submit-new-list" %>
         <% end %>
       </div>
     </div>
