--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <%= javascript_include_tag 'movies', 'data-turbo-track': 'reload' %>
+
+    <script src="app/javascript/movies.js"></script>
   </head>
 
   <body>
