--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -14,6 +14,7 @@
   </div>
 </div>
 </div>
-<div class="div-btn-home">
+<div class="div-btn-add">
+  <%= link_to 'My lists', lists_path, class: "btn btn-success btn-my-list"%>
   <%= link_to "Home", movies_path, class: "btn btn-success btn-home" %>
 </div>
